--- a/client/css/style.css
+++ b/client/css/style.css
@@ -3,10 +3,11 @@
   font-size: 1em;
 }
 body {
-  width: 700px;
-  height: 1300px;
+  max-width: 700px;
+  max-height: 1350px;
   box-shadow: 5px;
   padding: 0 1em 1em 1em;
+  margin: 0 auto;
   border: double black;
   color: white;
   background-color: #F2F5F8;
