--- a/client/css/style.css
+++ b/client/css/style.css
@@ -1,9 +1,7 @@
-* {
-  font-family: Roboto;
-  font-size: 1em;
-}
 html {
   display: inline-flex;
+  font-family: Roboto;
+  font-size: 1em;
 }
 body {
   max-width: 1105px;
@@ -32,6 +30,10 @@ header > h1 {
 }
 h3 {
   margin-bottom: 0;
+}
+h2 {
+  color: black;
+  font-size: 1.2em;
 }
 nav {
   font-family: Oswald;
@@ -78,8 +80,16 @@ ul {
   background-color: #2980b9;
   float: right;
 }*/
-.message-l /*, .message-r*/ {
+.messageByMe /*, .message-r*/ {
   background-color: #27ae60;
+  padding : 12px 15px;
+  margin-top: 0;
+  /*line-height: 25px;*/
+  border-radius: 0 5px 5px 5px;
+  /*width: 85%;*/
+}
+.messageNotByMe {
+  background-color: #2980b9;
   padding : 12px 15px;
   margin-top: 0;
   /*line-height: 25px;*/
@@ -176,4 +186,19 @@ nav li {
   }
 nav li:hover {
   color: #242424;
+}
+.modeUser {
+
+}
+.modeVoice::first-letter {
+  font-family: 'Share Tech';
+}
+.modeHalfOP::first-letter {
+  font-family: 'Share Tech';
+  }
+.modeOP::first-letter {
+  font-family: 'Share Tech';
+}
+.Everyone {
+  font-family: 'Arial Black';
 }
