--- a/client/css/responsive.css
+++ b/client/css/responsive.css
@@ -1,6 +1,10 @@
-@media screen and (max-width: 1030px) {
+@media screen and (max-width: 1030px) and (max-height: 768px){
   .ircChat {
     width: 500px;
+    height: 600px;
+  }
+  #chatbox {
+    height: 350px;
   }
   aside {
     width: 180px;
