--- a/client/css/style.css
+++ b/client/css/style.css
@@ -227,11 +227,21 @@ a {
 a:hover {
   text-decoration: underline;s
 }
-.ng-hide-remove {
-  position: relative
-  animation: 0.5s anim;
+.options {
+  border: 2px solid #95a5a6;
+  margin: 0 0 0 5px;
+  padding: 5px 10px;
+  max-width: 150px;
+  display: block;
 }
-@keyframes anim {
-  from {opacity: 0}
-  top {opacity: 1}
+.options:hover {
+  border-color: white;
+  transition: .5s linear all;
+  -webkit-transition: .5s linear all;
+}
+.options:nth-child(2) {
+  animation-delay: 0.5s;
+}
+.options:nth-child(3) {
+  animation-delay: 1s;
 }
