--- a/client/css/sprites.css
+++ b/client/css/sprites.css
@@ -1,8 +1,10 @@
 .sprites {
 	display: inline-block;
-	width: 18px;
-	height: 18px;
+	width: 20px;
+	height: 20px;
 	background-image: url("../img/smiley.png");
+  position: relative;
+  top: 5px;
 }
 
 .sprites[name=":)"] {background-position: 0 0;}
