--- a/client/css/sprites.css
+++ b/client/css/sprites.css
@@ -7,86 +7,86 @@
   top: 5px;
 }
 
-.sprites[name=":)"] {background-position: 0 0;}
-.sprites[name=":("] {background-position: -20px 0;}
-.sprites[name=":D"] {background-position: -40px 0;}
-.sprites[name="xD"] {background-position: -60px 0;}
-.sprites[name="(cool)"] {background-position: -80px 0;}
-.sprites[name=":o"] {background-position: 80px 0;}
-.sprites[name=";)"] {background-position: 60px 0;}
-.sprites[name="(chuckle)"] {background-position: 40px 0;}
-.sprites[name=":'("] {background-position: 20px 0;}
-.sprites[name="(fear)"] {background-position: 0 -20px;}
-.sprites[name=":|"] {background-position: -20px -20px;}
-.sprites[name="(kiss)"] {background-position: -40px -20px;}
-.sprites[name=":p"] {background-position: -60px -20px;}
-.sprites[name=":$"] {background-position: -80px -20px;}
-.sprites[name="(wait)"] {background-position: 80px -20px;}
-.sprites[name="(angel)"] {background-position: 60px -20px;}
-.sprites[name=":x"] {background-position: 40px -20px;}
-.sprites[name="(devil)"] {background-position: 20px -20px;}
-.sprites[name="(wasntme)"] {background-position: 0 -40px;}
-.sprites[name="(party)"] {background-position: -20px -40px;}
-.sprites[name=":@"] {background-position: -40px -40px;}
-.sprites[name="(doh)"] {background-position: -60px -40px;}
-.sprites[name="]:)"] {background-position: -80px -40px;}
-.sprites[name="(yawn)"] {background-position: 80px -40px;}
-.sprites[name="(inlove)"] {background-position: 60px -40px;}
-.sprites[name=":^)"] {background-position: 40px -40px;}
-.sprites[name="(idontcare)"] {background-position: 20px -40px;}
-.sprites[name="(heidy)"] {background-position: 0 -60px;}
-.sprites[name="<3"] {background-position: -20px -60px;}
-.sprites[name="(star)"] {background-position: -40px -60px;}
-.sprites[name="(handshake)"] {background-position: -60px -60px;}
-.sprites[name="(n)"] {background-position: -80px -60px;}
-.sprites[name="(y)"] {background-position: 80px -60px;}
-.sprites[name="(emo)"] {background-position: 60px -60px;}
-.sprites[name="(clap)"] {background-position: 40px -60px;}
-.sprites[name="(rofl)"] {background-position: 20px -60px;}
-.sprites[name="(bug)"] {background-position: 0 -80px;}
-.sprites[name="(headbang)"] {background-position: -20px -80px;}
-.sprites[name="(clock)"] {background-position: -40px -80px;}
-.sprites[name="(punch)"] {background-position: -60px -80px;}
-.sprites[name="(drunk)"] {background-position: -80px -80px;}
-.sprites[name="(smartphone)"] {background-position: 80px -80px;}
-.sprites[name="(film)"] {background-position: 60px -80px;}
-.sprites[name="(mail)"] {background-position: 40px -80px;}
-.sprites[name="(brokenheart)"] {background-position: 20px -80px;}
-.sprites[name="(cake)"] {background-position: 0 -100px;}
-.sprites[name="(music)"] {background-position: -20px -100px;}
-.sprites[name="($)"] {background-position: -40px -100px;}
-.sprites[name="(pizza)"] {background-position: -60px -100px;}
-.sprites[name="(cafe)"] {background-position: -80px -100px;}
-.sprites[name="(sun)"] {background-position: 80px -100px;}
-.sprites[name="(flex)"] {background-position: 60px -100px;}
-.sprites[name="(tmi)"] {background-position: 40px -100px;}
-.sprites[name="(flower)"] {background-position: 20px -100px;}
-.sprites[name="(smoke)"] {background-position: 0 -120px;}
-.sprites[name="(rain)"] {background-position: -20px -120px;}
-.sprites[name="(whew)"] {background-position: -40px -120px;}
-.sprites[name="(shake)"] {background-position: -60px -120px;}
-.sprites[name="(bow)"] {background-position: -80px -120px;}
-.sprites[name="(think)"] {background-position: 80px -120px;}
-.sprites[name="(call)"] {background-position: 60px -120px;}
-.sprites[name="(tumbleweed)"] {background-position: 40px -120px;}
-.sprites[name="(beer)"] {background-position: 20px -120px;}
-.sprites[name="(nerd)"] {background-position: 0 -140px;}
-.sprites[name="(hi)"] {background-position: -20px -140px;}
-.sprites[name="(mm)"] {background-position: -40px -140px;}
-.sprites[name="(puke)"] {background-position: -60px -140px;}
-.sprites[name="(worry)"] {background-position: -80px -140px;}
-.sprites[name="(facepalm)"] {background-position: 80px -140px;}
-.sprites[name="(dance)"] {background-position: 60px -140px;}
-.sprites[name="(bandit)"] {background-position: 40px -140px;}
-.sprites[name="(drink)"] {background-position: 20px -140px;}
-.sprites[name="|-)"] {background-position: 0 -160px;}
-.sprites[name="(ninja)"] {background-position: -20px -160px;}
-.sprites[name="(girl)"] {background-position: -40px -160px;}
-.sprites[name="(hug)"] {background-position: -60px -160px;}
-.sprites[name="(yn)"] {background-position: -80px -160px;}
-.sprites[name="(envy)"] {background-position: 80px -160px;}
-.sprites[name="(talktothehand)"] {background-position: 60px -160px;}
-.sprites[name="(cat)"] {background-position: 40px -160px;}
-.sprites[name="(idea)"] {background-position: 20px -160px;}
-.sprites[name="(rock)"] {background-position: 0 -180px;}
-.sprites[name="(poolparty)"] {background-position: -20px -180px;}
+.sprites.smile {background-position: 0 0;}
+.sprites.sad {background-position: -20px 0;}
+.sprites.happy {background-position: -40px 0;}
+.sprites.laugh {background-position: -60px 0;}
+.sprites.cool {background-position: -80px 0;}
+.sprites.shocked {background-position: 80px 0;}
+.sprites.twinkle {background-position: 60px 0;}
+.sprites.chuckle {background-position: 40px 0;}
+.sprites.cry {background-position: 20px 0;}
+.sprites.fear {background-position: 0 -20px;}
+.sprites.agape {background-position: -20px -20px;}
+.sprites.kiss {background-position: -40px -20px;}
+.sprites.pullthetong {background-position: -60px -20px;}
+.sprites.shy {background-position: -80px -20px;}
+.sprites.wait {background-position: 80px -20px;}
+.sprites.angel {background-position: 60px -20px;}
+.sprites.embarrassed {background-position: 40px -20px;}
+.sprites.devil {background-position: 20px -20px;}
+.sprites.wasntme {background-position: 0 -40px;}
+.sprites.party {background-position: -20px -40px;}
+.sprites.rage {background-position: -40px -40px;}
+.sprites.doh {background-position: -60px -40px;}
+.sprites.machiavellian {background-position: -80px -40px;}
+.sprites.yawn {background-position: 80px -40px;}
+.sprites.inlove {background-position: 60px -40px;}
+.sprites.wonder {background-position: 40px -40px;}
+.sprites.idontcare {background-position: 20px -40px;}
+.sprites.heidy {background-position: 0 -60px;}
+.sprites.love {background-position: -20px -60px;}
+.sprites.star {background-position: -40px -60px;}
+.sprites.handshake {background-position: -60px -60px;}
+.sprites.no {background-position: -80px -60px;}
+.sprites.yes {background-position: 80px -60px;}
+.sprites.emo {background-position: 60px -60px;}
+.sprites.clap {background-position: 40px -60px;}
+.sprites.rofl {background-position: 20px -60px;}
+.sprites.bug {background-position: 0 -80px;}
+.sprites.headbang {background-position: -20px -80px;}
+.sprites.clock {background-position: -40px -80px;}
+.sprites.punch {background-position: -60px -80px;}
+.sprites.drunk {background-position: -80px -80px;}
+.sprites.smartphone {background-position: 80px -80px;}
+.sprites.film {background-position: 60px -80px;}
+.sprites.mail {background-position: 40px -80px;}
+.sprites.brokenheart {background-position: 20px -80px;}
+.sprites.cake {background-position: 0 -100px;}
+.sprites.music {background-position: -20px -100px;}
+.sprites.dollar {background-position: -40px -100px;}
+.sprites.pizza {background-position: -60px -100px;}
+.sprites.cafe {background-position: -80px -100px;}
+.sprites.sun {background-position: 80px -100px;}
+.sprites.flex {background-position: 60px -100px;}
+.sprites.tmi {background-position: 40px -100px;}
+.sprites.flower {background-position: 20px -100px;}
+.sprites.smoke {background-position: 0 -120px;}
+.sprites.rain {background-position: -20px -120px;}
+.sprites.whew {background-position: -40px -120px;}
+.sprites.shake {background-position: -60px -120px;}
+.sprites.bow {background-position: -80px -120px;}
+.sprites.think {background-position: 80px -120px;}
+.sprites.call {background-position: 60px -120px;}
+.sprites.tumbleweed {background-position: 40px -120px;}
+.sprites.beer {background-position: 20px -120px;}
+.sprites.nerd {background-position: 0 -140px;}
+.sprites.hi {background-position: -20px -140px;}
+.sprites.mm {background-position: -40px -140px;}
+.sprites.puke {background-position: -60px -140px;}
+.sprites.worry {background-position: -80px -140px;}
+.sprites.facepalm {background-position: 80px -140px;}
+.sprites.dance {background-position: 60px -140px;}
+.sprites.bandit {background-position: 40px -140px;}
+.sprites.drink {background-position: 20px -140px;}
+.sprites.sleep {background-position: 0 -160px;}
+.sprites.ninja {background-position: -20px -160px;}
+.sprites.girl {background-position: -40px -160px;}
+.sprites.hug {background-position: -60px -160px;}
+.sprites.yn {background-position: -80px -160px;}
+.sprites.envy {background-position: 80px -160px;}
+.sprites.talktothehand {background-position: 60px -160px;}
+.sprites.cat {background-position: 40px -160px;}
+.sprites.idea {background-position: 20px -160px;}
+.sprites.rock {background-position: 0 -180px;}
+.sprites.poolparty {background-position: -20px -180px;}
