--- a/client/css/sprites.css
+++ b/client/css/sprites.css
@@ -1,11 +1,16 @@
 .sprites {
 	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background-image: url("../img/smiley.png");
+	position: relative;
+	top: 5px;
+	margin: 1px;
+}
+
+td.sprites {
 	width: 18px;
 	height: 18px;
-	background-image: url("../img/smiley.png");
-  position: relative;
-  top: 5px;
-	margin: 1px;
 }
 
 .sprites:hover {
